--- a/overlay/packages/apps/CarrierConfig/res/xml/vendor.xml
+++ b/overlay/packages/apps/CarrierConfig/res/xml/vendor.xml
@@ -26,9 +26,11 @@
         <string name="ci_action_on_sys_update_extra_val_string">com.vzwdmserver</string>
         <boolean name="config_wifi_disable_in_ecbm" value="true" />
         <boolean name="disable_cdma_activation_code_bool" value="true" />
-        <string-array name="sim_state_detection_carrier_app_string_array" num="2">
-            <item value="com.google.android.carrierentitlement" />
-            <item value="com.google.android.carrierentitlement.VzwActivationReceiver" />
+        <string-array name="signal_redirection_receiver_string_array" num="1">
+            <item value="com.google.android.carrierentitlement/.VzwActivationReceiver" />
+        </string-array>
+        <string-array name="signal_dcfailure_receiver_string_array" num="1">
+            <item value="com.google.android.carrierentitlement/.VzwActivationReceiver" />
         </string-array>
     </carrier_config>
     <carrier_config mcc="204" mnc="08">
@@ -291,9 +293,11 @@
         <string name="ci_action_on_sys_update_extra_val_string">com.vzwdmserver</string>
         <boolean name="config_wifi_disable_in_ecbm" value="true" />
         <boolean name="disable_cdma_activation_code_bool" value="true" />
-        <string-array name="sim_state_detection_carrier_app_string_array" num="2">
-            <item value="com.google.android.carrierentitlement" />
-            <item value="com.google.android.carrierentitlement.VzwActivationReceiver" />
+        <string-array name="signal_redirection_receiver_string_array" num="1">
+            <item value="com.google.android.carrierentitlement/.VzwActivationReceiver" />
+        </string-array>
+        <string-array name="signal_dcfailure_receiver_string_array" num="1">
+            <item value="com.google.android.carrierentitlement/.VzwActivationReceiver" />
         </string-array>
     </carrier_config>
     <carrier_config mcc="310" mnc="090">
@@ -312,9 +316,11 @@
         <string name="ci_action_on_sys_update_extra_val_string">com.vzwdmserver</string>
         <boolean name="config_wifi_disable_in_ecbm" value="true" />
         <boolean name="disable_cdma_activation_code_bool" value="true" />
-        <string-array name="sim_state_detection_carrier_app_string_array" num="2">
-            <item value="com.google.android.carrierentitlement" />
-            <item value="com.google.android.carrierentitlement.VzwActivationReceiver" />
+        <string-array name="signal_redirection_receiver_string_array" num="1">
+            <item value="com.google.android.carrierentitlement/.VzwActivationReceiver" />
+        </string-array>
+        <string-array name="signal_dcfailure_receiver_string_array" num="1">
+            <item value="com.google.android.carrierentitlement/.VzwActivationReceiver" />
         </string-array>
     </carrier_config>
     <carrier_config mcc="311" mnc="480" gid1="BA01270000000000">
@@ -405,6 +411,12 @@
     <carrier_config mcc="440" mnc="20">
         <int name="ims_dtmf_tone_delay_int" value="300" />
         <int name="gsm_dtmf_tone_delay_int" value="300" />
+    </carrier_config>
+    <carrier_config mcc="440" mnc="50">
+        <boolean name="carrier_volte_available_bool" value="true" />
+    </carrier_config>
+    <carrier_config mcc="440" mnc="51">
+        <boolean name="carrier_volte_available_bool" value="true" />
     </carrier_config>
     <carrier_config mcc="450" mnc="05">
         <int name="smsToMmsTextThreshold" value="1" />
